updated html view page with two separate list; one with only endpoint names and other will all metadata

--- a/catalogue-service/src/main/resources/templates/endpoints.html
+++ b/catalogue-service/src/main/resources/templates/endpoints.html
@@ -94,7 +94,16 @@
                 <td colspan="3"> No MicroServices Available </td>
             </tr>
 
-            <tr th:each="endpoint, isStat : ${endpointResponseList}"  >
+            <tr th:if="${endpointList!=null}" th:each="endpoint, isStat : ${endpointList}"  >
+                <!-- <td style="width:5%"><span th:text="${isStat.index + 1}">  </span></td> -->
+                <td style="width:15%" ><span th:text="${endpoint}">   </span></td>
+                <td style="width:10%" ><span> - </span> </td>
+                <td style="width:10%" > <span> - </span> </td>
+                <td id="NoData"> No Data Found!! </td>
+
+            </tr>
+
+            <tr th:if="${endpointResponseList!=null && endpointList==null}" th:each="endpoint, isStat : ${endpointResponseList}"  >
                 <!-- <td style="width:5%"><span th:text="${isStat.index + 1}">  </span></td> -->
                 <td style="width:15%" th:if="${endpoint.errorMsg==null}"><span th:text="${endpoint.endpointName}">   </span></td>
                 <td class="table-warning"  style="width:15%" th:if="${endpoint.errorMsg!=null}"><span th:text="${endpoint.endpointName}">   </span></td>
@@ -102,7 +111,6 @@
                 <td style="width:10%" th:if="${endpoint.numberOfInstances!=null}"><span th:text="${endpoint.numberOfInstances}"> </span></td>
                 <td style="width:10%" th:if="${endpoint.portNumbers==null}"> <span> - </span> </td>
                 <td style="width:10%" th:if="${endpoint.portNumbers!=null}"><span th:text="${endpoint.portNumbers}"> </span></td>
-                <td id="NoData" th:if="${endpoint.metadata==null && endpoint.errorMsg==null}"> No Data Found!! </td>
                 <td class="table-danger" id="inError" th:if="${endpoint.errorMsg!=null}"> <span th:text="${endpoint.errorMsg}"> </span> </td>
                 <td class="table-success" th:if="${endpoint.metadata!=null && !endpoint.metadata.empty}">
 
@@ -114,6 +122,8 @@
 
                 </td>
             </tr>
+
+
             </tbody>
         </table>
 
